internal/converter/fixtures/input/ingressroute_host.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  creationTimestamp: null
  name: host-check
  namespace: sample
spec:
  entryPoints:
    - http
  routes:
    - kind: Rule
      match: Host(`example.com`) && PathPrefix(`/`)
      priority: 1000
      services:
        - name: airflow-web
          port: 8080
    - kind: Rule
      match: Host(`example.com`, `example2.com`) && PathPrefix(`/`)
      priority: 1000
      services:
        - name: airflow-web
          port: 8080
    - kind: Rule
      match: Host(`example.com`) || (Host(`example.org`) && Path(`/traefik`, `/dashboard`))
      priority: 1000
      services:
        - name: airflow-web
          port: 8080
