internal/converter/fixtures/input/middleware_strip_prefix.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: app-internet
  namespace: app
spec:
  stripPrefix:
    prefixes:
      - /api/platform
